ingress.yaml
# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: argocd-server-ingress
#   namespace: argocd
#   annotations:
#     kubernetes.io/ingress.class: nginx
#     nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
#     nginx.ingress.kubernetes.io/ssl-passthrough: "true"
# spec:
#   rules:
#   - host: argocd.empapi.io
#     http:
#       paths:
#       - backend:
#           serviceName: argocd-server
#           servicePort: https

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: news-demo-dev-eventlistener
  namespace: news-demo-dev
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /listener
            pathType: Prefix
            backend:
              service:
                name: el-news-demo-dev-listener
                port:
                  number: 8080
